# cfcg-an-webhook

./: .env  .env.example  .gitignore  Dockerfile  ISSUES.md  PLAN_email_logic_redesign.md  Procfile  README.md  SETUP_GUIDE.md  STATUS.md  compare_configs.py  deploy.sh  export_an_people_file.py  export_import_an_people_csv.py  pyproject.toml  set-env-vars.sh  test_local.py
.github/workflows/: deploy.yml
cfcg_an_webhook/: config.py  main.py
tests/: conftest.py  test_main.py
tests/payloads/: attendance.json  donation.json  signature.json  submission.json
